Displaying chrips to home handlebar page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,6 @@
 <h1>Hello welcome to Chirpy!</h1>
+{{!-- <h2>Cat name: {{cat}}</h2> --}}
+<h2>All chirps</h2>
+{{#each allChirps}}
+    <li>text: {{chirp}}</li>
+{{/each}}
