--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Document</title>
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
         <header>This is the header of express-session_lab</header>
